--- a/Pages/Disaster/Profile/Index.cshtml
+++ b/Pages/Disaster/Profile/Index.cshtml
@@ -148,13 +148,17 @@
 </div>
 
 <div class="content">
-    <div class="head-title">
-        <h1>Evacuation Center Log</h1>
+    <div class="row">
+        <div class="col d-flex align-items-center">
+            <h1>Evacuation Center Log</h1>
+        </div>
 
-        <div class="d-flex justify-content-end align-items-center">
-            <a class="btn btn-primary mb-2" href="/disaster/profile/allocateec?disasterID=@Model.disasterInfo.disasterID">
-                <i class="bi bi-building-add"></i>Allocate Evacuation Center
-            </a>
+        <div class="col-auto d-flex justify-content-between align-items-center">
+            <div class="d-flex justify-content-end align-items-center">
+                <a class="btn btn-primary mb-2" href="/disaster/profile/allocateec?disasterID=@Model.disasterInfo.disasterID">
+                    <i class="bi bi-building-add"></i>Allocate Evacuation Center
+                </a>
+            </div>
         </div>
     </div>
 
