--- a/Pages/disaster/profile/entrylog/Index.cshtml
+++ b/Pages/disaster/profile/entrylog/Index.cshtml
@@ -105,14 +105,6 @@
 					</ul>
 				</div>
 
-				<!-- Search Bar -->
-				<form id="search-form" class="pb-5">
-					<div class="input-group">
-						<input type="search" class="form-control ds-input" id="search-bar" placeholder="Search Evacuee" aria-label="Search..." autocomplete="off" role="combobox" aria-autocomplete="list" aria-expanded="false" aria-owns="algolia-autocomplete-listbox-0" dir="auto" style="position: relative; vertical-align: top;">
-						<button type="submit" class="btn btn-primary" id="search-button"><i class="bi bi-search"></i></button>
-					</div>
-				</form>
-
 				<form method="POST" id="checkOut">
 					<input type="hidden" name="centerLogID" value="@Model.logInfo.centerLogID" />
 					<div class="row">
@@ -130,57 +122,80 @@
 						</div>
 					</div>
 
-					<div class="table-responsive pt-3">
-						<table class="table align-middle table-hover" style="width:100%">
-							<thead>
-								<tr>
-									<th></th>
-									<th>Name</th>
-									<th>Check-in Date</th>
-									<th>Check-out Date</th>
-									<th>Status</th>
-									<th></th>
-								</tr>
-							</thead>
-							<tbody>
-								@foreach (var item in Model.listEntryLog)
-								{
+					<div class="col-lg-12">
+						@if (Model.listEntryLog.Count == 0)
+						{
+							<table class="table display compact order-column" cellspacing="0" width="100%">
+								<thead>
 									<tr>
-										<td width="5%">
-											<div class="form-check">
-												<input class="form-check-input" type="checkbox" value="@item.entryLogID" 
-												name="selectedEvacuees[]" @((item.entryStatus == "Check-out") ? "disabled" : "")>
-												<label class="form-check-label"></label>
-											</div>
-										</td>
-										<td width="30%">@item.fullName</td>
-										<td width="20%">@item.checkInDate</td>
-										<td width="20%">@item.checkOutDate</td>
-										<td width="15%">
-											@if (@item.entryStatus == "Check-in")
-											{
-												<span class="badge bg-success">Check-in</span>
-											}
-											else if (@item.entryStatus == "Check-out")
-											{
-												<span class="badge rounded-pill bg-light">Check-out</span>
-											}
-										</td>
-										<td width="10%">
-											<div class="d-inline position-relative">
-												<a href="#" role="button" id="recordOptions" data-bs-toggle="dropdown" aria-expanded="false">
-													<i class="bi bi-three-dots-vertical"></i>
-												</a>
-												<ul class="dropdown-menu" aria-labelledby="recordOptions">
-													<li><a class="dropdown-item" href="#">View Family Profile</a></li>
-													<li><a class="dropdown-item" href="#" onclick="confirmDelete();">Delete Entry Log</a></li>
-												</ul>
-											</div>
-										</td>
+										<th></th>
+										<th>Name</th>
+										<th>Check-in Date</th>
+										<th>Check-out Date</th>
+										<th>Status</th>
+										<th></th>
 									</tr>
-								}
-							</tbody>
-						</table>
+								</thead>
+								<tbody>
+									<tr>
+										<td class="text-center" colspan="6">There are no evacuees checked-in at this evacuation center.</td>
+									</tr>
+								</tbody>
+							</table>
+						}
+						else
+						{
+							<table id="entrylog-table" class="table display compact order-column table-hover" cellspacing="0" width="100%">
+								<thead>
+									<tr>
+										<th></th>
+										<th>Name</th>
+										<th>Check-in Date</th>
+										<th>Check-out Date</th>
+										<th>Status</th>
+										<th></th>
+									</tr>
+								</thead>
+								<tbody>
+									@foreach (var item in Model.listEntryLog)
+									{
+										<tr>
+											<td width="5%">
+												<div class="form-check">
+													<input class="form-check-input" type="checkbox" value="@item.entryLogID"
+													name="selectedEvacuees[]" @((item.entryStatus == "Check-out") ? "disabled" : "")>
+													<label class="form-check-label"></label>
+												</div>
+											</td>
+											<td width="30%">@item.fullName</td>
+											<td width="20%">@item.checkInDate</td>
+											<td width="20%">@item.checkOutDate</td>
+											<td width="15%">
+												@if (@item.entryStatus == "Check-in")
+												{
+													<span class="badge bg-success">Check-in</span>
+												}
+												else if (@item.entryStatus == "Check-out")
+												{
+													<span class="badge rounded-pill bg-light">Check-out</span>
+												}
+											</td>
+											<td width="10%">
+												<div class="d-inline position-relative">
+													<a href="#" role="button" id="recordOptions" data-bs-toggle="dropdown" aria-expanded="false">
+														<i class="bi bi-three-dots-vertical"></i>
+													</a>
+													<ul class="dropdown-menu" aria-labelledby="recordOptions">
+														<li><a class="dropdown-item" href="/family/index">View Family Profile</a></li>
+														<li><a class="dropdown-item" href="#" onclick="confirmDelete();">Delete Entry Log</a></li>
+													</ul>
+												</div>
+											</td>
+										</tr>
+									}
+								</tbody>
+							</table>
+						}
 					</div>
 				</form>
 			</div>
@@ -201,7 +216,7 @@
 			</div>
 			<div class="modal-footer">
 				<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
-				<button type="button" class="btn btn-danger" id="confirmSaveButton">Check-out</button>
+				<button type="button" class="btn btn-primary" id="confirmSaveButton">Check-out</button>
 			</div>
 		</div>
 	</div>
@@ -232,6 +247,19 @@
 
 	// Attach the onchange event to the select element
 	pageSelect.addEventListener('change', redirectToSelectedPage);
+</script>
+
+<!-- Making the table responsive -->
+<script>
+	$(document).ready(function () {
+		$('#entrylog-table').DataTable({
+			responsive: true,
+			columnDefs: [
+				{ "orderable": true, "targets": [1, 2, 3] }, // Sortable columns
+				{ "orderable": false, "targets": [0, 4, 5] } // Non-sortable columns
+			]
+		});
+	});
 </script>
 
 <!-- Enable/disable "Save Selection" button -->
