--- a/Pages/Disaster/Index.cshtml
+++ b/Pages/Disaster/Index.cshtml
@@ -67,7 +67,7 @@
 
 	<div class="row p-2">
 		<div class="col-lg-12">
-			<table id="disaster-table" class="table display compact order-column" cellspacing="0" width="100%">
+			<table id="disaster-table" class="table display compact order-column table-hover" cellspacing="0" width="100%">
 				<thead>
 					<tr>
 						<th>#</th>
