Added sort to occupancy and assigned staff columns

--- a/Pages/Disaster/Profile/Index.cshtml
+++ b/Pages/Disaster/Profile/Index.cshtml
@@ -278,8 +278,8 @@
         $('#eclog-table').DataTable({
             responsive: true,
             columnDefs: [
-                { "orderable": true, "targets": [0, 1, 2, 5, 6] }, // Sortable columns
-                { "orderable": false, "targets": [3, 4, 7] } // Non-sortable columns
+                { "orderable": true, "targets": [0, 1, 2, 3, 4, 5, 6] }, // Sortable columns
+                { "orderable": false, "targets": [7] } // Non-sortable columns
             ]
         });
     });
