Working CheckIn page backend

--- a/Pages/Disaster/Profile/AllocateEC.cshtml
+++ b/Pages/Disaster/Profile/AllocateEC.cshtml
@@ -93,7 +93,7 @@
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
-                <p>Are you sure you want to allocate the following evacuation centers?</p>
+                <p>Are you sure you want to allocate the selected evacuation centers?</p>
                 <strong class="text-danger">This cannot be undone.</strong>
             </div>
             <div class="modal-footer">
